--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
+  "scripts": {
+    "start": "webpack && node index.js",
+    "build": "webpack"
+  },
   "dependencies": {
     "express": "^4.18.3",
     "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   }
 }
