--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "scripts": {
-    "start": "webpack && node index.js",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "npm run build && node index.js"
   },
   "dependencies": {
     "express": "^4.18.3",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.2",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   }
