--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   },
   "dependencies": {
     "express": "^4.18.3",
+    "lodash": "^4.17.21",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.2",
     "webpack": "^5.90.3",
